<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="18dp"
    android:orientation="vertical">

    Layout for Title plus ImageButton at top

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_other_title"
        android:textAllCaps="true"
        android:textSize="24sp">
    </TextView>

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_other_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_bill_expense_title"
        android:textAllCaps="true"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/new_other_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/new_other_expense_hint"/>


</LinearLayout>